fix typo on viewType, successfully triggered resolveCustomTextEditor()

--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "customEditors": [
       {
         "viewType": "gbCustom.guabao",
-        "displayName": "GuaBao",
+        "displayName": "GuaBao View",
         "selector": [
           {
             "filenamePattern": "*.gcl"
           }
-        ]
+        ],
+        "priority": "default"
       }
     ],
-    "language": [
+    "languages": [
       {
         "id": "guabao",
         "extensions": [
