--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
       {
         "command": "guabaovlang.reload",
         "title": "GuaBao Reload"
+      },
+      {
+        "command": "guabaovlang.helloworld",
+        "title": "GuaBao Hello World"
       }
     ],
     "keybindings": []
