Make ReqHelloWorld work and make refine work (although it only ouputs GARBAGE.)

--- a/package.json
+++ b/package.json
@@ -69,6 +69,10 @@
       {
         "command": "guabaovlang.helloworld",
         "title": "GuaBao Hello World"
+      },
+      {
+        "command": "guabaovlang.inspect",
+        "title": "GuaBao Inspect"
       }
     ],
     "keybindings": []
